<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.ContinueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toMain"
            style="@style/navigation_top"
            android:text="@string/text_toMain" />

        <Button
            android:id="@+id/toPlaylist"
            style="@style/navigation_top"
            android:text="@string/text_toPlaylist" />

        <Button
            android:id="@+id/toLessons"
            style="@style/navigation_top"
            android:text="@string/text_toLessons" />

        <Button
            android:id="@+id/toSettings"
            style="@style/navigation_top"
            android:text="@string/text_toSettings" />

    </LinearLayout>

    <TextView
        style="@style/activity_titles"
        android:text="@string/title_continue" />

    <ScrollView
        style="@style/scrollviews_in_activities">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/information_texviews"
                android:text="@string/information_player" />

            <TextView
                style="@style/information_texviews"
                android:text="@string/information_nextplaying">

            </TextView>

            <ImageView
                style="@style/example_images"

                android:src="@drawable/example_listview">

            </ImageView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/bottom_views">

        <ImageButton
            style="@style/bottom_buttons"
            android:src="@drawable/ic_skip_previous" />

        <ImageButton
            style="@style/bottom_buttons"
            android:src="@drawable/ic_stop" />

        <!--This is visible when player is on (instead of the Play button)-->
        <!--<ImageButton-->
        <!--style="@style/bottom_buttons"-->
        <!--android:src="@drawable/ic_pause" />-->


        <ImageButton
            style="@style/bottom_buttons"
            android:src="@drawable/ic_play" />

        <ImageButton
            style="@style/bottom_buttons"
            android:src="@drawable/ic_skip_next" />

        <ImageButton
            style="@style/bottom_buttons"
            android:src="@drawable/ic_playlist_add" />

    </LinearLayout>

</LinearLayout>
